--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,24 @@ jobs:
         run: pytest --junitxml=report.xml 
 
   analysis:
-    runs-on: ubuntu-latest 
-    needs: build 
+    runs-on: windows-latest 
+    needs: build
     steps: 
       - name: Checkout repository 
-        uses: actions/checkout@v3 
+        uses: actions/checkout@v3
+
+      - name: Перевірка наявності схваленого код-рев’ю
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const prNumber = context.payload.pull_request.number;
+            const {data: reviews} = await github.pulls.listReviews({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: prNumber
+            });
+            
+            const approved = reviews.some(review => review.state === 'APPROVED');
+            if (!approved) {
+              core.setFailed("Код-рев’ю не схвалено");
+            }
