--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request: 
     types: [opened, edited, reopened, synchronize, review_requested, submitted]
     branches: 
-      - develop 
+      - develop
 
 jobs: 
   build: 
@@ -26,7 +26,7 @@ jobs:
         run: pytest --junitxml=report.xml 
 
   analysis:
-    runs-on: windows-latest 
+    runs-on: windows-latest  # Windows-образ для Cloc
     needs: build
     steps: 
       - name: Checkout repository 
@@ -47,3 +47,12 @@ jobs:
             if (!approved) {
               core.setFailed("Код-рев’ю не схвалено");
             }
+
+      - name: Install Cloc with Chocolatey
+        run: |
+          choco install cloc -y
+
+      - name: Count lines of code with Cloc
+        run: |
+          cloc src\ > cloc-report.txt
+          type cloc-report.txt
