--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: pytest --junitxml=report.xml 
 
   analysis:
-    runs-on: windows-latest  # Windows-образ для Cloc
+    runs-on: windows-latest  # Windows-образ для Cloc та SonarQube
     needs: build
     steps: 
       - name: Checkout repository 
@@ -56,3 +56,9 @@ jobs:
         run: |
           cloc src\ > cloc-report.txt
           type cloc-report.txt
+
+      - name: Run SonarQube analysis
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner
