--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
         run: | 
           pip install -r requirements.txt 
 
-      - name: Run tests 
-        run: pytest --junitxml=report.xml 
+      # - name: Run tests
+      #   run: pytest --junitxml=report.xml
 
   analysis:
     runs-on: windows-latest  # Windows-образ для Cloc, SonarQube, Flake8, Black
