--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,21 +32,22 @@ jobs:
       - name: Checkout repository 
         uses: actions/checkout@v3
 
-      - name: Перевірка наявності схваленого код-рев’ю
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const prNumber = context.payload.pull_request.number;
-            const { data: reviews } = await github.rest.pulls.listReviews({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: prNumber
-            });
-            
-            const approved = reviews.some(review => review.state === 'APPROVED');
-            if (!approved) {
-              core.setFailed("Код-рев’ю не схвалено");
-            }
+      # Закоментований крок для перевірки наявності схваленого код-рев’ю
+      # - name: Перевірка наявності схваленого код-рев’ю
+      #   uses: actions/github-script@v6
+      #   with:
+      #     script: |
+      #       const prNumber = context.payload.pull_request.number;
+      #       const { data: reviews } = await github.rest.pulls.listReviews({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         pull_number: prNumber
+      #       });
+      #       
+      #       const approved = reviews.some(review => review.state === 'APPROVED');
+      #       if (!approved) {
+      #         core.setFailed("Код-рев’ю не схвалено");
+      #       }
 
       - name: Install Cloc with Chocolatey
         run: |
