--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,18 +49,20 @@ jobs:
       #         core.setFailed("Код-рев’ю не схвалено");
       #       }
 
-      - name: Install SonarQube Scanner manually
+      - name: Install SonarQube Scanner
         run: |
-          # Завантаження SonarQube Scanner
-          Invoke-WebRequest -Uri https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-windows.zip -OutFile sonar-scanner.zip
-          
-          # Розпаковка архіву
-          Expand-Archive sonar-scanner.zip -DestinationPath $env:ProgramFiles
-          
-          # Додавання шляху до змінної середовища PATH
-          $env:PATH += ";$env:ProgramFiles\sonar-scanner-4.6.2.2472-windows\bin"
-          
-          # Перевірка доступності sonar-scanner
+          # Завантаження архіву
+          Invoke-WebRequest -Uri "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-windows.zip" -OutFile sonar-scanner.zip
+
+          # Розпаковка
+          Expand-Archive sonar-scanner.zip -DestinationPath "C:\sonar-scanner"
+
+          # Додавання шляху до змінної PATH
+          echo "C:\sonar-scanner\sonar-scanner-4.6.2.2472-windows\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+
+      - name: Verify SonarQube Scanner installation
+        run: |
+          dir C:\sonar-scanner\sonar-scanner-4.6.2.2472-windows\bin
           sonar-scanner --version
 
       - name: Install Cloc
@@ -80,7 +82,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          sonar-scanner
+          sonar-scanner.bat
 
       - name: Запуск flake8 через Reviewdog
         uses: reviewdog/action-flake8@v2
